ingress/argocdingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - argocd.kiril.shop
      secretName: kiril-shop-wildcard-tls

  rules:
    - host: argocd.kiril.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
