ingress/plane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-traefik-ingress
  namespace: plane
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - plane.kiril.shop
      secretName: kiril-shop-wildcard-tls

  rules:
    - host: plane.kiril.shop
      http:
        paths:
          - path: /god-mode
            pathType: Prefix
            backend:
              service:
                name: plane-admin
                port:
                  number: 3000

          - path: /spaces
            pathType: Prefix
            backend:
              service:
                name: plane-space
                port:
                  number: 3000

          - path: /live
            pathType: Prefix
            backend:
              service:
                name: plane-live
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: plane-api
                port:
                  number: 8000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: plane-api
                port:
                  number: 8000

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: plane-minio
                port:
                  number: 9000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: plane-web
                port:
                  number: 3000
